lookup issue resolve

--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -5,6 +5,12 @@
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/Payable/Payable_Search_Events.js"></script>
 <script src="~/Scripts/Modules/Payable/Payable_Search_Method.js"></script>
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+</style>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
