--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
@@ -7,6 +7,13 @@
 <script src="/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/ProductDispatch/search_product_dispatch_event.js"></script>
 <script src="~/Scripts/Modules/ProductDispatch/search_product_dispatch_method.js"></script>
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+
+</style>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
