--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
@@ -45,7 +45,11 @@ img{
         position: relative;
         left: 50%;
     }
-    
+
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
     </style>
 <div class="content-wrapper">
 
