--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -4,6 +4,12 @@
 <script src="~/Scripts/Modules/PurchaseOrderRequest/purchaseorderrequest_methods.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/PurchaseOrderRequest/purchaseorderrequest_validation.js"></script>
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+    </style>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -60,7 +66,7 @@
 
                 <input type="hidden" id="hdf_Vendor_Id" />
 
-               
+
 
                 <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
                 <div class="form-group col-md-4">
