--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
@@ -7,6 +7,12 @@
 <script src="~/Scripts/Modules/Payable/Payable_Validation.js"></script>
 <script src="~/Scripts/Modules/Payable/Payable_events.js"></script>
 <script src="~/Scripts/Modules/Payable/Payable_method.js"></script>
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+</style>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
