--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -5,6 +5,12 @@
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Event.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Methods.js"></script>
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+</style>
 @*<script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>*@
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
