--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -64,6 +64,11 @@
         background: #e34724;
         border-radius: 50%;
     }
+
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
 </style>
 
 
