--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -4,6 +4,13 @@
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_methods.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_validation.js"></script>
 
+<style>
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+</style>
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
