--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -101,7 +101,7 @@
                             <div class="btn-group" style="margin-top: -6px;">
                                 <button type="button" id="btnSearchPayable" class="btn btn-success active">Search</button>
                                 <button type="reset" id="btnResetPayable" class="btn btn-danger active">Reset</button>
-                                <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
+                                <button type="button" id="btnPay" class="btn btn-primary active" style="display:none">Pay</button>
                             </div>
                         </div>
 
