--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -102,7 +102,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Date of birth.</span>
                         <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy" >
-                            <input type="text" class="form-control datepicker" name="Customer.Customer_DOB" value="@((Model.Customer.Customer_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Customer date of birth" />  
+                            <input type="text" class="form-control datepicker" id="txt_DOB" name="Customer.Customer_DOB" value="@((Model.Customer.Customer_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Customer date of birth" />  
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div> 
@@ -231,7 +231,7 @@
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse date of birth.</span>
                 <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                <input type="text" class="form-control datepicker" name="Customer.Customer_Spouse_DOB" value="@((Model.Customer.Customer_Spouse_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Spouse_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Spouse date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                <input type="text" class="form-control datepicker" id="dtp_Spousebirth" name="Customer.Customer_Spouse_DOB" value="@((Model.Customer.Customer_Spouse_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Spouse_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Spouse date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
             </div>
                     </div>
@@ -239,7 +239,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Wedding annniversary date.</span>
                         <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                        <input type="text" class="form-control datepicker" name="Customer.Customer_Wedding_Anniversary" value="@((Model.Customer.Customer_Wedding_Anniversary == DateTime.MinValue ? "" : Model.Customer.Customer_Wedding_Anniversary.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Wedding Anniversary date" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                        <input type="text" class="form-control datepicker" id="dtp_Weddingannniv" name="Customer.Customer_Wedding_Anniversary" value="@((Model.Customer.Customer_Wedding_Anniversary == DateTime.MinValue ? "" : Model.Customer.Customer_Wedding_Anniversary.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Wedding Anniversary date" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                     </div>
                     </div>
@@ -252,7 +252,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 date of birth.</span>
                         <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                        <input type="text" class="form-control datepicker" name="Customer.Customer_Child1_DOB" value="@((Model.Customer.Customer_Child1_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child1_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 1 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                        <input type="text" class="form-control datepicker" id="dtp_Child1_DOB" name="Customer.Customer_Child1_DOB" value="@((Model.Customer.Customer_Child1_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child1_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 1 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                     </div>
                     </div>
@@ -265,7 +265,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 date of birth.</span>
                         <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                            <input type="text" class="form-control datepicker" name="Customer.Customer_Child2_DOB" value="@((Model.Customer.Customer_Child2_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child2_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 2 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                            <input type="text" class="form-control datepicker" id="dtp_Child2_DOB" name="Customer.Customer_Child2_DOB" value="@((Model.Customer.Customer_Child2_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child2_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 2 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
