--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
@@ -11,7 +11,7 @@
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
     <li><a href="#">Masters</a></li>
-    <li class="active">Pay</li>
+    <li class="active">Payable</li>
 </ul>
 <!-- END BREADCRUMB -->
 <!-- START CONTENT FRAME -->
@@ -21,7 +21,7 @@
     <div class="content-frame-top">
         <div class="col-md-12">
             <div class="page-title">
-                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Pay</h2>
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Payable</h2>
             </div>
             <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Index", "Payable")'"><i class="fa fa-angle-double-left"></i>BACK</button>
         </div>
