--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -53,9 +53,21 @@
                                
 
                                 <div class="col-md-2">
-                                    <div class="form-group">
+                                    @*<div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
                                         <input type="text" class="form-control input-sm" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" value="@Model.Receivable.Sales_Invoice_No" placeholder="Enter Invoice no" maxlength="10"/>
+                                    </div>*@
+
+
+                                    <div class="form-group auto-complete">
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
+                                        <div class="input-group">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col=" Sales_Invoice_Id,Sales_Invoice_No" data-headernames="Invoice No">
+                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                            <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-value" />
+                                            <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-label" />
+
+                                        </div>
                                     </div>
                                 </div>
 
