--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -14,7 +14,7 @@
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
     <li><a href="#">Masters</a></li>
-    <li class="active">Pay</li>
+    <li class="active">Receivable</li>
 </ul>
 <!-- END BREADCRUMB -->
 <!-- START CONTENT FRAME -->
@@ -24,7 +24,7 @@
     <div class="content-frame-top">
         <div class="col-md-12">
             <div class="page-title">
-                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Pay</h2>
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Receivable</h2>
             </div>
             <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Index", "Receivable")'"><i class="fa fa-angle-double-left"></i>BACK</button>
         </div>
@@ -63,6 +63,7 @@
                                     
                                 </div>
                             </div>
+
                         </div>
 
 
