--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -683,8 +683,8 @@
                         <div class="row">
                             <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
                                 <div class="btn-group">
-                                    <button type="button" id="btnSaveSalesOrder" class="btn btn-success"><i class="fa fa-check"></i>Save</button>
-                                    <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesOrder")"><i class="fa fa-times"></i>Cancel </a>
+                                    <button type="button" id="btnSaveSalesOrder" class="btn btn-success"></i>Save</button>
+                                    <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesOrder")"></i>Cancel </a>
                                 </div>
                             </div>
 
