Changes in Filter of Sales_Invoice adn Sales_Return based on Branch_ID..Store Procedures and done in the changes of code for Search Listing..

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
@@ -239,7 +239,7 @@ img{
                                 </div>
 
                                 <div class="col-md-2">
-                                    <a class="btn btn-default bg-blue" role="button" id="btnBack" href="@Url.Action("Index", "SalesOrder")">Back</a>
+                                    <a class="btn btn-default bg-blue" role="button" id="btnBack" href="@Url.Action("Search", "SalesOrder")">Back</a>
                                     @*<button type="button" id="btnPrint" class="btn btn-default bg-orange">Print</button>*@
                                 </div>
                             </div>
