--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesInvoiceView.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesInvoiceView.cshtml
@@ -77,10 +77,11 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
-        <div class="col-md-3">
+        <div class="col-md-12">
             <div class="page-title">
                 <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Sales Invoice View</h2>
             </div>
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "SalesOrder")'"><i class="fa fa-angle-double-left"></i> BACK</button>
         </div>
 
         @*<div class="col-md-9">
