--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -57,7 +57,20 @@
                                     </div>
 
                                 </div>
+                                @*<div class="form-group">
+                                        <input type="text" class="form-control" name="Filter.Sales_Return_No" placeholder="Enter SalesReturn Number to search." />
+                                        <input type="hidden" name="Filter.Sales_Return_Id" id="hdnSalesReturnID">
+                                    </div>*@
 
+                            </div>
+
+                            <div class="col-md-2" style="text-align: right; padding-top: 27px; padding-bottom: 0px; padding-right: 50px; padding-left: 0px;">
+
+                                <div class="btn-group">
+                                    <a class="btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">Create </a>
+                                    <button role="button" class="btn btn-danger active" id="btnView">View</button>
+
+                                </div>
 
                             </div>
 
@@ -65,42 +78,26 @@
 
                     </div>
 
-
-
-                    <div class="col-md-2" style="text-align: right; padding-top: 27px; padding-bottom: 0px; padding-right: 50px; padding-left: 0px;">
-
-                        <div class="btn-group">
-                            <a class="btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">Create </a>
-                            <button role="button" class="btn btn-danger active" id="btnView">View</button>
-
-                        </div>
-
-                    </div>
+                </form>
 
             </div>
 
         </div>
 
-        </form>
 
-    </div>
+        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
 
-</div>
-
-
-<div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
-
-</div>
+        </div>
 
 
 
-<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
-</div>
+        </div>
 
-<div class="col-md-12" style="padding: 0px;text-align:center;" id="divSalesReturnPager">
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divSalesReturnPager">
 
-</div>
+        </div>
 
     </div>
 
