--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MyLeoRetailer.Models.SalesReturnViewModel
-
+@using MyLeoRetailer.Common;
+@using MyLeoRetailerInfo.Common;
 
 @{
     ViewBag.Title = "Search";
@@ -45,7 +46,7 @@
 
                         <div class="row">
 
-                            <div class="col-md-3">
+                            @*<div class="col-md-3">
                                 <div class="form-group auto-complete">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Sales return no</span>
                                     <div class="input-group">
@@ -57,12 +58,34 @@
                                     </div>
 
                                     </div>
-                                    @*<div class="form-group">
-                <input type="text" class="form-control" name="Filter.Sales_Return_No" placeholder="Enter SalesReturn Number to search." />
-                <input type="hidden" name="Filter.Sales_Return_Id" id="hdnSalesReturnID">
-            </div>*@
+                                  
+
+                                </div>*@
+
+                            <div class="col-md-3">
+
+                                @{
+                                    LoginInfo Cookies = new LoginInfo();
+                                    Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
+
+                                    <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
+                                }
+
+                                <div class="form-group auto-complete">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Sales return no</span>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="Filter.Sales_Return_No" id="txtSalesReturnNo" placeholder="Enter Sales Return no to search" value="" data-table="Sales_Return" data-col="Branch_ID,Sales_Return_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Sales Return No">
+                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                        <input type="hidden" id="hdnSalesReturnID" name="Filter.Sales_Return_Id" class="auto-complete-label" />
+                                        <input type="hidden" id="hdnSalesReturnNo" name="Filter.Sales_Return_No" class="auto-complete-value" />
+
+                                    </div>
 
                                 </div>
+
+
+
+                            </div>
 
                             <div class="col-md-2" style="text-align: right; padding-top: 27px; padding-bottom: 0px; padding-right: 50px; padding-left: 0px;">
 
