--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -73,7 +73,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrderRequest">Create</button>
-                                <button role="button" class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrderRequest">View</button>
+                                <button role="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrderRequest">View</button>
                             </div>
 
                         </div>
