--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -53,8 +53,8 @@
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
-                                <button type="button" class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">View</button>
-                                <button type="button" class="btn btn-info active" value="View" id="btnViewPurchaseOrder">Print</button>
+                                <button type="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrder">View</button>
+                                <button type="button" class="btn btn-info active" disabled value="View" id="btnViewPurchaseOrder">Print</button>
                             </div>
 
                         </div>
